--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "@types/jest": "^27.5.1",
     "ant-design-pro": "^2.3.2",
     "antd": "^4.20.6",
+    "console-browserify": "^1.2.0",
+    "consolelog": "^2.1.3",
     "node-fetch": "^3.2.4",
+    "node-polyfill-webpack-plugin": "^1.1.4",
+    "path-browserify": "^1.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
